// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componene <GifGrid /> Debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Batman
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas al componene <GifGrid /> Debe mostrar los items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Batman
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="Abecd"
      key="Abecd"
      title="Un título"
      url="https://localhost/image/img.jpg"
    />
  </div>
</Fragment>
`;
